--- a/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
@@ -101,7 +101,7 @@
                             title = response[indexcnt].title;
                         else
                             title = "";
-                        template = "<div class='span12 custom-yellow-container' ><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].questionid + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
+                        template = "<div class='span12 custom-yellow-container' ><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].question_seo + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
                         "<div class='inner-count-likes pull-right' title='Thanked by patient'>" + response[indexcnt].thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'> " + response[indexcnt].endorsecount + "</div><div></div></div></div><div class='row-fluid'>" +
                         "<div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img'><img src=" + img + "></div></div></div><div class='feedDocImage img visible-phone'><img src=" + img + "></div><div class='span6 middle-size-padding'><div class='ans_time_detail'><a class='ans_time_detail' target='_blank' href='../doctor/"+response[indexcnt].name_seo+"'>Dr. " + response[indexcnt].answerreplyedby + "</a> </div><div class='title_text'>" + title + "</div></div></div><div class='row-fluid'>";
                         if (ansimg.length > 0) {
