--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -26,24 +26,24 @@
                     <div class="margin_bottom">
                         @if (Model != null && (Model.ToList().Count != 0))
                         {
-                            for (int i = 0; i < Model.ToList().Count; i++)
+                            foreach (QuestionModel QModel in Model)
                             {
                                 <div class='row-fluid'>
                                     <div class='span12 custom-green-container' style="display:table">
-                                        <a style="display:table-row" href='/@(System.Text.RegularExpressions.Regex.Replace(Model.ToList()[i].QuestionText.Replace(' ','-'),"[^a-zA-Z0-9_-]+", " ").Replace(" ","").ToLower())'>
-                                            <div class='question_text custom-middle'>@Html.Raw(Model.ToList()[i].QuestionText) </div>
+                                        <a style="display:table-row" href='/@(QModel.QuestionTextSeo)'>
+                                            <div class='question_text custom-middle'>@Html.Raw(QModel.QuestionText) </div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class='row-fluid'>
-                                    @if (!String.IsNullOrEmpty(Model.ToList()[i].DocImg) || !String.IsNullOrEmpty(Model.ToList()[i].answerreplyedby))
+                                    @if (!String.IsNullOrEmpty(QModel.DocImg) || !String.IsNullOrEmpty(QModel.answerreplyedby))
                                     {
 
                                         <div id="feedDocImage_SQ" class='span1'>
                                             <div class='feedDocImage img'>
-                                                @if ((Model.ToList()[i].DocImg) != "" && (Model.ToList()[i].DocImg) != null)
+                                                @if ((QModel.DocImg) != "" && (QModel.DocImg) != null)
                                                 {
-                                                    <img src='@Model.ToList()[i].DocImg' />
+                                                    <img src='@QModel.DocImg' />
                                                 }
                                                 else
                                                 {
@@ -52,9 +52,9 @@
                                             </div>
                                         </div>
                                         <div class='span6 middle-size-padding'>
-                                            <div class='ans_time_detail'><a class="ans_time_detail" target="_blank" href="../doctor/@Model.ToList()[i].name_seo">@Model.ToList()[i].answerreplyedby </a></div>
+                                            <div class='ans_time_detail'><a class="ans_time_detail" target="_blank" href="../doctor/@QModel.name_seo">@QModel.answerreplyedby </a></div>
                                             <div class='title_text'>
-                                                @Model.ToList()[i].Title
+                                                @QModel.Title
                                             </div>
                                         </div>
                                     }
@@ -64,43 +64,43 @@
                                             <p class='ans_text'>No answers received </p>
                                         </div>
                                     }
-                                    @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
+                                    @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(QModel.isdocconnectuser))
                                     {
                                         <div class="span3  pull-right hidden-phone">
-                                            <a class='btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + @MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) &frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))")'>Book Appointment </a>
+                                            <a class='btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + @MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(QModel.UserId)) &frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(QModel.UserId))")'>Book Appointment </a>
                                             <br />
                                             <br />
                                         </div>
                                     }
 
                                     <div class='span11 middle-size-padding'>
-                                        @if (Model.ToList()[i].answers != null && Model.ToList()[i].answers.Count > 0)
+                                        @if (QModel.answers != null && QModel.answers.Count > 0)
                                         {
-                                            if (!string.IsNullOrEmpty(Model.ToList()[i].answers[0].AnswerImage))
+                                            if (!string.IsNullOrEmpty(QModel.answers[0].AnswerImage))
                                             {
                                                 <div class='span5 '>
-                                                    <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText </p>
+                                                    <p class='ans_text'>@QModel.answers[0].AnswerText </p>
                                                 </div>
                                                 <div class='span3 offset1' id="feedAnsImage_SQ">
                                                     <div class='feedAnsImage img'>
-                                                        <img src="../feed/answerPhotos/@Model.ToList()[i].answers[0].AnswerImage">
+                                                        <img src="../feed/answerPhotos/@QModel.answers[0].AnswerImage">
                                                     </div>
                                                 </div>
                                             }
                                             else
                                             {
                                                 <div class='span11'>
-                                                    <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText</p>
+                                                    <p class='ans_text'>@QModel.answers[0].AnswerText</p>
                                                 </div>
                                             }
                                         }
                                     </div>
                                 </div>
-                                if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
+                                if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(QModel.isdocconnectuser))
                                 {
-                                    var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
+                                    var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(QModel.UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
-                                        <a class='btn book_appt_button' href='href' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))")'>Book Appointment </a>
+                                        <a class='btn book_appt_button' href='href' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(QModel.UserId))")'>Book Appointment </a>
                                     </div>
                                     <br />
                                 }
