--- a/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
+++ b/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
@@ -22,7 +22,7 @@
                         }
                         else
                         {
-                            <a class="question_text" href="../answers/@question.QuestionId" onclick="ga('send', 'event', 'Patient', 'Review The Answers', '@(question.QuestionText)');">
+                            <a class="question_text" href="../answers/@question.QuestionTextSeo" onclick="ga('send', 'event', 'Patient', 'Review The Answers', '@(question.QuestionText)');">
                                 @Html.Raw(question.QuestionText)
                             </a>
                         }
