--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -85,7 +85,7 @@
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
                                     template = template + "<div class='span3 pull-right hidden-phone'><a class='btn book_appt_button' onclick='bookaptclicked(\"" + response[indexcnt].docid + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a><br/><br/></div>";
                                 if (response[indexcnt].isdocconnectuser != true)
-                                    template = template + "<div class='span3 pull-right hidden-phone'><a Class='btn book_appt_button' onclick='ViewProfile(\"" + response[indexcnt].docid + "\")'>Book Appointment </a></div>";
+                                    template = template + "<div class='span3 pull-right hidden-phone'><a Class='btn book_appt_button' onclick='ViewProfile(\"" + response[indexcnt].docid + "\");bookaptclicked(\"" + response[indexcnt].docid + "\")'>Book Appointment </a></div>";
                             }
                             template = template + "</div>";
                             if (ansimg.length > 0) {
@@ -98,7 +98,7 @@
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
                                     template = template + "<div class='span3 pull-left visible-phone'><a class='btn book_appt_button' onclick='bookaptclicked(\"" + response[indexcnt].docid + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a></div>";
                                 if (response[indexcnt].isdocconnectuser != true)
-                                    template = template + "<div class='span3 pull-left visible-phone'><a Class='btn book_appt_button make_appointment_btn btn-margin-bottom' onclick='ViewProfile(\"" + response[indexcnt].docid + "\")'>Book Appointment </a></div>";
+                                    template = template + "<div class='span3 pull-left visible-phone'><a Class='btn book_appt_button make_appointment_btn btn-margin-bottom' onclick='ViewProfile(\"" + response[indexcnt].docid + "\");bookaptclicked(\"" + response[indexcnt].docid + "\")'>Book Appointment </a></div>";
                             }
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 template = template + "<div class='row-fluid margintop_tosharebutn'>";
