--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -406,7 +406,7 @@
                             title = response[indexcnt].title;
                         else
                             title = "";
-                        template = "<div class='span12 custom-yellow-container' ><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].questionid + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
+                        template = "<div class='span12 custom-yellow-container' ><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].question_seo + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
                         "<div class='inner-count-likes pull-right' title='Thanked by patient'>" + response[indexcnt].thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'> " + response[indexcnt].endorsecount + "</div><div></div></div></div><div class='row-fluid'>" +
                         "<div class='span5'><div class='title_text'>" + title + "</div></div></div><div class='row-fluid'>";
                         if (ansimg.length > 0) {
