Book appointment number is updated & class name is changed for font

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4239,7 +4239,7 @@ table.cust-table {
     padding-top:3px; 
     line-height:2;
 }
-.small-font {
+.book-appt-small-font {
     font-size: 14px;
 }
 .cust-small-space-below{
