--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="row-fluid center_align bg-white">
             <div class="span12 answer-title doc-detail-word-break center_align">
-                To book an appointment call on 8888888
+                To book an appointment call on 07666 252 444
             </div>
         </div>
         <div class="row-fluid center_align bg-white">
@@ -33,13 +33,15 @@
     </div>
     <div id="visible-phone" class="bg-white doc-detail-word-break " style="padding: 15px;">
         <div id="bookappt" class="row-fluid center_align bg-white ">
-            <div class="span12 answer-title doc-detail-word-break center_align small-font">
+            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font">
                 Book Appointment
             </div>
         </div>
         <div class="row-fluid center_align bg-white">
-            <div class="span12 answer-title doc-detail-word-break center_align small-font">
-                <p class="center_align"> To book an appointment call on 8888888</p>
+            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font" >
+                <p class="center_align">
+                    To book an appointment call on 07666 252 444
+                </p>
             </div>
         </div>
         <div class="row-fluid center_align bg-white">
