Fixed changes name of Google analytic event

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -262,7 +262,7 @@
                 }
                 if (errormsg == "") {
                     var QuestionText = $(".question_text").html();
-                    ga('send', 'event', 'Doctor', 'Answer', 'Create Patient Account',QuestionText);
+                    ga('send', 'event', 'Doctor', 'Answered Questions',QuestionText);
                     return true;
                 }
                 else {
