--- a/MiraiConsultMVC/Views/User/_DoctorDetails.cshtml
+++ b/MiraiConsultMVC/Views/User/_DoctorDetails.cshtml
@@ -14,6 +14,10 @@
                 Dr. @doctor.FirstName @doctor.LastName
             </td>
             <td style='word-wrap: break-word'>
+                @*Sort by registration date*@
+                <div style="display:none;">
+                    @doctor.RegistrationDate.ToString("yyyy/MM/dd")
+                </div>
                 @doctor.RegistrationDate.ToString("dd/MM/yyyy")
             </td>
             <td style='word-wrap: break-word'>
