--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -38,20 +38,20 @@
     </div>
     <div id="visible-phone" class="bg-white doc-detail-word-break "style="padding-top: 16px;" >
         <div id="bookappt" class="row-fluid center_align bg-white ">
-            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font cust-no-margin">
+            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font margin-null">
                 Book Appointment
             </div>
         </div>
         <div class="row-fluid center_align bg-white">
-            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font cust-no-margin">
-                <p class="center_align cust-no-margin">
+            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font margin-null">
+                <p class="center_align margin-null">
                     To book an appointment call on
                 </p>
             </div>
         </div>
         <div class="row-fluid center_align bg-white">
-            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font cust-no-margin">
-                <p class="center_align cust-no-margin">
+            <div class="span12 answer-title doc-detail-word-break center_align book-appt-small-font margin-null">
+                <p class="center_align margin-null">
                     07666 252 444
                 </p>
             </div>
