margin-null applied

--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -16,12 +16,12 @@
 <body class="bg-white">
     <div id="hidden-phone" class="bg-white doc-detail-word-break center_align" style="padding: 6px;">
         <div id="bookappt" class="row-fluid center_align bg-white " >
-            <div class="span12 answer-title doc-detail-word-break center_align" style="margin:0px">
+            <div class="span12 answer-title doc-detail-word-break center_align margin-null" >
                 Book Appointment
             </div>
         </div>
-        <div class="row-fluid center_align bg-white" style="margin:0px">
-            <div class="span12 answer-title doc-detail-word-break center_align" style="margin:0px">
+        <div class="row-fluid center_align bg-white margin-null">
+            <div class="span12 answer-title doc-detail-word-break center_align margin-null">
                 To book an appointment call on
             </div>
         </div>
