Commiting route changes

--- a/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
@@ -34,7 +34,7 @@
                             }
                         </div>
                         <div class='custom-middle middle-size-padding question-padding' style='width:80%; word-break:break-all'>
-                            <a class='question_text' href='/question/@question.QuestionTextSeo'>
+                            <a class='question_text' href='/question/@question.QuestionId'>
                                 @Html.Raw(question.QuestionText)
                             </a>
                         </div>
