--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -69,7 +69,24 @@
             <input type="hidden" id="hdnDocconnecturl" name="hdnDocconnecturl" value="@Model.hdnDocconnecturl" />
             <input type="hidden" id="hdnLoactionId" name="hdnLoactionId" value="@Model.hdnLoactionId" />
             <input type="hidden" id="hdnCityId" name="hdnCityId" value="@Model.hdnCityId" />
-
+            <div class="modal hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header center_align">
+                            <h4 class="popup-title">
+                                Book Appointment
+                            </h4>
+                        </div>
+                        <div class="modal-body">
+                            <p class="answer-title doc-detail-word-break center_align">To book an appointment call on</p>
+                            <p class="answer-title doc-detail-word-break center_align margin-null">07666 252 444</p>
+                        </div>
+                        <div class="modal-footer center_align">
+                            <button type="button" class="btn thanx cust-red" style="padding:4px 30px;" data-dismiss="modal"><b>OK</b></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="~/Content/chosen/chosen.jquery.js"></script>
         <script src="~/Content/js/utility.js"></script>
@@ -170,7 +187,7 @@
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
                                     template = template + "<div class='span3 pull-right'><a onclick='bookaptclicked(\"" + response[indexcnt].userid + "\", \"" + response[indexcnt].name + "\")' href='" + docconnecturl + response[indexcnt].userid + "&frmaskmirai=1' Class='btn book_appt_button make_appointment_btn btn-margin-bottom' target='_blank' >Book Appointment </a></div>";
                                 if (response[indexcnt].isdocconnectuser != true)
-                                    template = template + "<div class='span3 pull-right'><a Class='btn book_appt_button make_appointment_btn btn-margin-bottom' onclick='ViewProfile(\"" + response[indexcnt].userid + "\") ;bookaptclicked(\"" + response[indexcnt].userid + "\", \"" + response[indexcnt].name + "\");'>Book Appointment </a></div>";
+                                    template = template + "<div class='span3 pull-right'><a Class='btn book_appt_button make_appointment_btn btn-margin-bottom' data-toggle='modal' data-target='#myModal' data-backdrop='static' data-keyboard='false' onclick='bookaptclicked(\"" + response[indexcnt].userid + "\", \"" + response[indexcnt].name + "\");'>Book Appointment </a></div>";
                             template = template + "</div>";
                             $("#searchResult").append(template);
                         }
