--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -96,7 +96,7 @@
                                     @if (Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
                                     {
                                         <div class="span3  pull-right hidden-phone">
-                                            <a class='btn book_appt_button' onclick="ViewProfile(@Model.ToList()[i].UserId); bookaptclicked('@Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))');">Book Appointment </a>
+                                            <a class='btn book_appt_button' data-toggle='modal' data-target='#myModal' data-backdrop='static' data-keyboard='false' onclick="bookaptclicked('@Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))');">Book Appointment </a>
                                             <br />
                                             <br />
                                         </div>
@@ -132,7 +132,7 @@
                                 {
                                     var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
-                                        <a class='btn book_appt_button' onclick="ViewProfile(@Model.ToList()[i].UserId); bookaptclicked('@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))');"> Book Appointment </a>
+                                        <a class='btn book_appt_button' data-toggle='modal' data-target='#myModal' data-backdrop='static' data-keyboard='false' onclick="bookaptclicked('@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))');"> Book Appointment </a>
                                     </div>
                                     <br />
                                 }
@@ -146,6 +146,24 @@
                 </div>
             </div>
         </div>
+        <div class="modal hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header center_align">
+                        <h4 class="popup-title">
+                            Book Appointment
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="answer-title doc-detail-word-break center_align">To book an appointment call on</p>
+                        <p class="answer-title doc-detail-word-break center_align margin-null">07666 252 444</p>
+                    </div>
+                    <div class="modal-footer center_align">
+                        <button type="button" class="btn thanx cust-red" style="padding:4px 30px;" data-dismiss="modal"><b>OK</b></button>
+                    </div>
+                </div>
+            </div>
+         </div>
         <script type="text/javascript" src="../Content/js/utility.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
